# exercise-reminder

./: .gitignore  .mcp.json  AGENTS.md  INFRA.md  README.md  claude.md
exercise-reminder-v2-archive/: .gitignore  00_START_HERE.md  CC-00-控制中心-模板.md  CC-ARCHIVE-20260126.md  CC-ARCHIVE-YYYYMM-模板.md  EXPERIENCE_PAGE_IMPLEMENTATION.md  PROMPT-LIB-00-提示词库-模板.md  QUICK_START.md  README.md  SOP-01-快速启动.md  TEST_REPORT.md  demo.py  demo_experience_page.py  prd.md  pyproject.toml  requirements.txt  run_wizard.py  test_app.py  test_complete.py  test_core.py  test_dialog_countdown.py  test_exercise_library.py  test_gui.py  test_gui_fixed.py  test_main_window.py  test_statistics.py
exercise-reminder-v2-archive/docs/: DESIGN-ARCH-001.md  DESIGN-IxD-001-backup-20260127.md  DESIGN-IxD-001.md  DESIGN-UI-001-backup-20260127.md  DESIGN-UI-001.md  DEVIATION-ANALYSIS-2026-01-27.md  EVIDENCE-SPEC.md  EXECUTION_PROTOCOL.md  PRD-v2.0.md
exercise-reminder-v2-archive/scripts/: test_hook.py  validate-evidence.ps1  validate_evidence.py
exercise-reminder-v2-archive/src/: __init__.py  main.py
exercise-reminder-v2-archive/tests/: TEST-CASES-20260126.md  test_app_imports.py  test_config_migration.py  test_cooldown_mechanism.py  test_demo_fix.py  test_dialogs.py  test_experience_page.py  test_first_run_wizard.py  test_full_suite.py  test_integration.py  test_logger.py  test_main_window.py  test_main_window_data.py  test_profile_page.py  test_statistics_view.py  test_theme_page.py  test_tts_manager.py  test_ui_automation.py  test_ui_design_compliance.py  test_wizard_signals_complete.py  (+1 more)
(+172 files in other folders)
